--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 //.env
 BASE_API_URL_CORONA_WORLD = "https://monotein-books.vercel.app/api/corona-tracker/summary"
 
+BASE_API_URL_WEATHERAPI = "https://api.weatherapi.com/v1/current.json?key=b5c77b27a2234da6859121952241408&q="
